# BatteryLogger

./: CMakeLists.txt  Readme.md  consts.h  install.sh  main.c
systemd/: battery-logger.service  battery-logger.timer
